--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,16 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# ignore language vector files
+collect_language_vectors/language_vectors_bucket/*
+
+# ignore predictions
+recover/multiQ/*
+recover/lcb/*
+
+# ignore trained models
+recover/models/*
+
+slurm-*
+wandb*
